infra/k8s/overlays/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vendora-ingress-canary
  namespace: vendora
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: vendora.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vendora-web-canary
                port:
                  number: 80
